新增秒杀业务逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,4 +43,6 @@ redis.poolMaxTotal=10
 redis.poolMaxIdle=10
 redis.poolMaxWait=3
 
+spring.thymeleaf.check-template=false
+logging.level.cn.edu.wust.miaosha.mapper=debug
 
