--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,6 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -95,7 +94,7 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 
 	<!--<build>
