--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -97,7 +103,7 @@
 		</dependency>
 	</dependencies>
 
-	<!--<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -106,19 +112,20 @@
 		</plugins>
 		<resources>
 			<resource>
-				&lt;!&ndash;加载资源目录&ndash;&gt;
+				<!--加载资源目录-->
 				<directory>src/main/resources</directory>
 				<includes>
-					&lt;!&ndash;加载配置文件&ndash;&gt;
+					<!--加载配置文件-->
 					<include>**/*.xml</include>
 					<include>**/*.properties</include>
-					&lt;!&ndash;加载模板文件&ndash;&gt;
+					<!--加载模板文件-->
 					<include>**/*.html</include>
-					&lt;!&ndash;加载静态文件&ndash;&gt;
-					<include>/static/</include>
+					<!--加载静态文件-->
+					<include>**/static/**</include>
+					<include>**/templates/**</include>
 				</includes>
 			</resource>
 		</resources>
-	</build>-->
+	</build>
 
 </project>
