--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,48 +1,1 @@
-#thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.content-type=text/html
-spring.thymeleaf.enabled=true
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-#mybatis
-mybatis.type-aliases-package=cn.edu.wust.miaosha.entity
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.configuration.default-fetch-size=100
-mybatis.configuration.default-statement-timeout=3000
-mybatis.mapperLocations=classpath:cn/edu/wust/miaosha/mapper/*.xml
-
-#druid
-spring.datasource.url=jdbc:mysql://localhost:3306/miaosha?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.filters=stat
-spring.datasource.max-active=2
-spring.datasource.initial-size=1
-spring.datasource.max-wait=60000
-spring.datasource.min-idle=1
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-spring.datasource.druid.validation-query=SELECT 'x'
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
-spring.datasource.druid.pool-prepared-statements=true
-spring.datasource.maxOpenPreparedStatements=20
-
-#redis
-redis.host=localhost
-redis.port=6379
-redis.timeout=3
-redis.password=15671601816
-redis.poolMaxTotal=10
-redis.poolMaxIdle=10
-redis.poolMaxWait=3
-
-spring.thymeleaf.check-template=false
-logging.level.cn.edu.wust.miaosha.mapper=debug
-
+spring.profiles.active=dev
